--- a/LaTeX_diplomaterv/diploma.tex
+++ b/LaTeX_diplomaterv/diploma.tex
@@ -20,6 +20,9 @@
 \usepackage{setspace}  % Ettol a tablazatok, abrak, labjegyzetek maradnak 1-es sorkozzel!
 \usepackage[hang]{caption}
 \usepackage{hyperref}
+\usepackage{courier}
+
+
 
 %--------------------------------------------------------------------------------------
 % Main variables
@@ -106,7 +109,8 @@
 \DeclareMathOperator{\sign}{sgn}
 \DeclareMathOperator{\rot}{rot}
 \definecolor{lightgray}{rgb}{0.95,0.95,0.95}
-
+\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
 \author{\vikszerzo}
 \title{\viktitle}
 \includeonly{
