--- a/LaTeX_diplomaterv/chapter3.tex
+++ b/LaTeX_diplomaterv/chapter3.tex
@@ -1,3 +1,7 @@
+
+
+\input{jslistings}
+
 %----------------------------------------------------------------------------
 \chapter{Technológiai áttekintés}
 %----------------------------------------------------------------------------
@@ -14,15 +18,8 @@ Derp.
 %----------------------------------------------------------------------------
 Derp.
 
-%----------------------------------------------------------------------------
-\section{Socket.IO}
-%----------------------------------------------------------------------------
-A Socket.IO egy JavaScript könyvtár ami valósidejű alkalmazásokat tesz lehetővé. Ha a hagyományos kliens-szerver weboldal modellre gondolunk, akkor azt a hiányosságot oldja meg, hogy miután letöltődik a honlap a böngészőbe nem egyértelmű, hogy hogyan tudnánk a kliens oldalon reagálni szerver oldali eseményekre. 
-Valósidejű alkalmazásra egy naív próbálkozás az egyszerű AJAX polling,  
 
-A WebSocket protokoll egy TCP kapcsolaton full-duplex kommunikációt biztosít.
-
-
+\input{socketio}
 %----------------------------------------------------------------------------
 \section{jQuery}
 %----------------------------------------------------------------------------
