more subdocuments and bib

--- a/LaTeX_diplomaterv/chapter3.tex
+++ b/LaTeX_diplomaterv/chapter3.tex
@@ -25,13 +25,14 @@ Derp.
 %----------------------------------------------------------------------------
 Derp.
 
+\input{src/angular}
+
+
+\input{src/nodejs}
+
+
+
 %----------------------------------------------------------------------------
-\section{AngularJS}
-%----------------------------------------------------------------------------
-Derp.%----------------------------------------------------------------------------
-\section{Node.JS}
-%----------------------------------------------------------------------------
-Derp.%----------------------------------------------------------------------------
 \section{WebRTC}
 %----------------------------------------------------------------------------
 Derp.
