--- a/LaTeX_diplomaterv/chapter4.tex
+++ b/LaTeX_diplomaterv/chapter4.tex
@@ -1,7 +1,7 @@
 %----------------------------------------------------------------------------
 \chapter{Az elvégzett munka}
 %----------------------------------------------------------------------------
-Derp derp, valami szöveg. Árvíztűrő tükörfúrógép.
+Derp derp, valami szöveg\cite{Wettl04}. Árvíztűrő tükörfúrógép.
 
 
 %----------------------------------------------------------------------------
