--- a/LaTeX_diplomaterv/socketio.tex
+++ b/LaTeX_diplomaterv/socketio.tex
@@ -1,7 +1,7 @@
 %----------------------------------------------------------------------------
 \section{Socket.IO}
 %----------------------------------------------------------------------------
-A Socket.IO egy JavaScript könyvtár ami valósidejű alkalmazásokat tesz lehetővé. Ha a hagyományos kliens-szerver weboldal modellre gondolunk, akkor azt a hiányosságot oldja meg, hogy miután letöltődik a honlap a böngészőbe nem egyértelmű, hogy hogyan tudnánk a kliens oldalon reagálni szerver oldali eseményekre. A WebSocket protokoll egy TCP kapcsolaton full-duplex kommunikációt biztosít.
+A Socket.IO egy JavaScript könyvtár ami valósidejű alkalmazásokat tesz lehetővé. Ha a hagyományos kliens-szerver weboldal modellre gondolunk, akkor azt a hiányosságot oldja meg, hogy miután letöltődik a honlap a böngészőben, nem egyértelmű, hogy hogyan tudnánk a kliens oldalon reagálni szerver oldali eseményekre. A WebSocket protokoll egy TCP kapcsolaton full-duplex kommunikációt biztosít.
 
 Valósidejű alkalmazásra egy naív próbálkozás az egyszerű AJAX polling, ami így nézhet ki:
 \medskip
