wip angular docs

--- a/LaTeX_diplomaterv/chapter4.tex
+++ b/LaTeX_diplomaterv/chapter4.tex
@@ -1,11 +1,12 @@
 %----------------------------------------------------------------------------
 \chapter{Az elvégzett munka}
 %----------------------------------------------------------------------------
-Derp derp, valami szöveg\cite{Wettl04}. Árvíztűrő tükörfúrógép.
+Derp derp, valami szöveg\cite{Wettl04}. 
+
 
 
 %----------------------------------------------------------------------------
-\section{Árvíztűrő tükörfúrógép}
+\section{A szerver oldali alkalmazás}
 %----------------------------------------------------------------------------
 Derp.
 
