--- a/LaTeX_diplomaterv/diploma.tex
+++ b/LaTeX_diplomaterv/diploma.tex
@@ -10,6 +10,7 @@
 \usepackage[thmmarks]{ntheorem}
 \usepackage{graphics}
 \usepackage{epsfig}
+\usepackage{upquote}
 \usepackage{listings}
 \usepackage{color}
 %\usepackage{fancyhdr}
