--- a/LaTeX_diplomaterv/mybib.bib
+++ b/LaTeX_diplomaterv/mybib.bib
@@ -6,3 +6,10 @@
   publisher="Panem derp",
   year=2004
 }
+
+@BOOK{angularbook,
+  author="Brad Green and Shyam Seshadri",
+  title="AngularJS",
+  publisher="O''Reilly Media",
+  year=2013
+}
