--- a/LaTeX_diplomaterv/mybib.bib
+++ b/LaTeX_diplomaterv/mybib.bib
@@ -13,3 +13,12 @@
   publisher="O''Reilly Media",
   year=2013
 }
+
+@misc{AngularDocConcepts,
+  author= "angularjs.org",
+  title = {AngularJS Conceptual Overview},
+  year = 2013,
+  howpublished = {\url{http://docs.angularjs.org/guide/concepts}},
+  note = {Accessed: 2013-11-01}
+}
+
