--- a/LaTeX_diplomaterv/src/angular.tex
+++ b/LaTeX_diplomaterv/src/angular.tex
@@ -6,7 +6,17 @@ Az AngularJS egy nyílt forrású JavaScript keretrendszer ami ``single-page''\f
 
 \subsection{Kliensoldali HTML generálás}
 
-A hagyományos weboldal esetében a böngészőben megjelenített HTML a szerver oldali alkalmazás által van létrehozva.  A single-page alkalmazás ebben az esetben úgy jön létre, hogy AJAX felhasználásával betöltés után töltődnek be újabb részei az oldalnak\cite{angularbook}. AngularJS esetében ez a művelet a kliens oldalra kerül így a szerver inkább egy adatforrás és statikus tartalom szolgáltatóvá válik. Így lazább csatolást érünk el a szerver és kliens oldal között esetleg párhuzamosítva a fejlesztést és növelve az újrafelhasználhatóságot. 
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=10cm,keepaspectratio]{figures/concepts-startup.png}
+\caption{figure}
+\label{fig:angularhtml}
+\end{figure}
+
+A hagyományos weboldal esetében a böngészőben megjelenített HTML a szerver oldali alkalmazás által van létrehozva.  A single-page alkalmazás ebben az esetben úgy jön létre, hogy AJAX felhasználásával betöltés után töltődnek be újabb részei az oldalnak\cite{angularbook}. AngularJS esetében ez a művelet a kliens oldalra kerül így a szerver inkább egy adatforrás és statikus tartalom szolgáltatóvá válik. Így lazább csatolást érünk el a szerver és kliens oldal között esetleg párhuzamosítva a fejlesztést és növelve az újrafelhasználhatóságot.\cite{AngularDocConcepts}
+
+
+
 
 
 \subsection{Direktívák}
