browser test base

--- a/LaTeX_diplomaterv/chapter3.tex
+++ b/LaTeX_diplomaterv/chapter3.tex
@@ -21,7 +21,7 @@ Derp.
 
 \input{socketio}
 %----------------------------------------------------------------------------
-\section{jQuery}
+\section{MongoDB}
 %----------------------------------------------------------------------------
 Derp.
 \input{src/angular}
