--- a/LaTeX_diplomaterv/chapter3.tex
+++ b/LaTeX_diplomaterv/chapter3.tex
@@ -20,19 +20,15 @@ Derp.
 
 
 \input{socketio}
-%----------------------------------------------------------------------------
-\section{MongoDB}
-%----------------------------------------------------------------------------
-Derp.
+
 \input{src/angular}
+
+\input{src/mongo}
+
+
 
 
 \input{src/nodejs}
 
 
-
-%----------------------------------------------------------------------------
-\section{WebRTC}
-%----------------------------------------------------------------------------
-Derp.
 
