--- a/LaTeX_diplomaterv/chapter4.tex
+++ b/LaTeX_diplomaterv/chapter4.tex
@@ -6,9 +6,20 @@ Derp derp, valami szöveg\cite{Wettl04}.
 
 
 %----------------------------------------------------------------------------
+\section{A kliens oldali alkalmazás}
+%----------------------------------------------------------------------------
+Derp.
+
+
+
+%----------------------------------------------------------------------------
 \section{A szerver oldali alkalmazás}
 %----------------------------------------------------------------------------
 Derp.
 
 
+%----------------------------------------------------------------------------
+\section{Szimuláció}
+%----------------------------------------------------------------------------
+Derp.
 
