--- a/LaTeX_diplomaterv/chapter5.tex
+++ b/LaTeX_diplomaterv/chapter5.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Teljesítményelemzés}
+\chapter{Teljesítményelemzés és optimalizálás}
 %----------------------------------------------------------------------------
 Derp derp, valami szöveg. Árvíztűrő tükörfúrógép.
 
@@ -7,9 +7,26 @@ Selenium tesztek
 
 
 %----------------------------------------------------------------------------
-\section{Árvíztűrő tükörfúrógép}
+\section{Kollaborációs teljesítményelemzés}
 %----------------------------------------------------------------------------
 Derp.
+
+%----------------------------------------------------------------------------
+\section{Kliens oldali teljesítményelemzés}
+%----------------------------------------------------------------------------
+Derp.
+
+%----------------------------------------------------------------------------
+\section{Webszerver teljesítményelemzés}
+%----------------------------------------------------------------------------
+Derp.
+
+%----------------------------------------------------------------------------
+\section{Adatbázis teljesítményelemzés}
+%----------------------------------------------------------------------------
+Derp.
+
+
 
 
 
