--- a/LaTeX_diplomaterv/socketio.tex
+++ b/LaTeX_diplomaterv/socketio.tex
@@ -30,7 +30,7 @@ Erre egy alternatíva a Long Polling, ekkor a válasz nem érkezik meg a szerver
 %TODO
 \section{Websockets}
 
-\include{rfc6455}
+\input{rfc6455}
 
 
 
