--- a/LaTeX_diplomaterv/chapter6.tex
+++ b/LaTeX_diplomaterv/chapter6.tex
@@ -1,7 +1,7 @@
 %----------------------------------------------------------------------------
 \chapter{Összefoglalás}
 %----------------------------------------------------------------------------
-Derp derp, valami szöveg. Árvíztűrő tükörfúrógép.
+ Árvíztűrő tükörfúrógép.
 
 
 %----------------------------------------------------------------------------
