--- a/LaTeX_diplomaterv/chapter1.tex
+++ b/LaTeX_diplomaterv/chapter1.tex
@@ -1,11 +1,48 @@
 %----------------------------------------------------------------------------
 \chapter{Webes vizuális dokumentumszerkesztők}
 %----------------------------------------------------------------------------
-Derp derp, valami szöveg. Árvíztűrő tükörfúrógép.
+(2-3 oldal) 
+
+A Web2.0 világában, amikor a weboldalak továbbfejlődtek az egyszerű statikus tartalom szintjéről elszaporodtak a böngészőben futó alkalmazások. Egy webes dokumentumszerkesztő alatt a böngészőben futó irodai jellegű dokumentum szerkesztőt értjük, az alkalmazás szolgáltatása Saas (Software as a Service) módszerrel történik, amelynél a szoftver és az adatok központilag vannak tárolva és interneten keresztül érhetők el. Manapság a nagyobb szoftvercégeknek a központi stratégiájává vált a SaaS. 
+\pdfcomment[icon=Note]{http://peterlaird.blogspot.hu/2008/06/how-oracle-ibm-sap-microsoft-and-intuit.html}
+
+\section{Történet}
+
+1995-ben a Netscape cég bevezette a Javascript kliensoldali szkriptnyelvet, így már lehetséges volt a dinamikus tartalom előállítása anélkül, hogy új kérést küldjön a böngésző a szervernek.
+
+1996-ban a Macromedia cég bevezette a Flash lejátszót, egy vektorgrafikus lejátszót, ami böngésző plug-in-ként volt elérhető.
+
+1999-ben XMLHttpRequest API elérhető volt Internet Explorer 5-ben, lehetséges volt kliens oldalról Javascript kódból egy kérést indítani, ami XML-t kért le a szervertől, majd feldolgozta azt.
+
+2005-ben az AJAX -- Asynchronous Javascript and XML -- fogalom megjelent \pdfcomment[icon=Note]{https://web.archive.org/web/20080702075113/http://www.adaptivepath.com/ideas/essays/archives/000385.php} és ebben az időben Google-nek a Gmail alkalmazásának  funkcionalitása már egyre nagyobb része AJAX alapú volt.
+
+2011-ben érett meg a HTML5, ami multimédia lehetőségeket biztosít a böngészőben plugin-ok nélkül, példáúl video tartalom lejátszására már natív módon van lehetőség. HTML5 Canvas segítségével gazdag két dimenziós grafikus felületek alakíthatók ki. 
+
+\section{Előnyök}
+
+Egy triviális előny az, hogy nem kell az alkalmazást telepíteni a felhasználó számítógépére, természetesen, feltételezve, hogy egy böngésző már telepítve van a rendszeren. Manapság az egyszerű felhasználónak nagy valószínűséggel van telepített böngészője, nem is egy. Ez az előny vállalati szempontból nézve mégnagyobb: egy új vállalati webalkalmazás bevezetése esetében nem kell mind az -- esetleg -- ezer gépre telepíteni szoftvert.
+Mégjobb a helyzet amiatt, hogy verzió frissítésnél nem is kell semmit csinálni, a felhasználók megkapják mindig a legújabb verziót. Manapság elterjedtek a kizárólag SSD-t tartalmazó hordozható eszközök, egy 64 gigabájt kapacitású merevlemezre már nem szeretnénk egy több gigabájtos dokumentumszerkesztő készletet telepíteni.
+
+Az elérhetőség egy nagy előny hiszen a felhasználó bármilyen számítógépről -- internet kapcsolatot feltételezve -- el tudja érni az alkalmazást. Ez a centralizáltság adatbiztonság szempontból is előnyös hiszen centralizáltan történik az összes felhasználó dokumentumainak a biztonsági mentése ugyanakkor az átlagos felhasználó leggyakrabban pendrive vagy optikai lemezre menti az adatait, ez előbbit el lehet veszíteni, az útóbbi meg idővel észrevétlenül használhatatlanná válhat. 
+
+A webes tartalmat könnyebb megosztani és könnyebb a kollaboráció.
+
+\section{Hátrányok}
+
+Adatbiztonsági hátrányai vannak viszont a webes dokumentumszerkesztőknek, egyszerűen fogalmazva, annyira biztonságos az interneten tárolt adat amennyire biztonságban van tartva a jelszavunk. Elképzelhető könnyen olyan szituáció, hogy egy jelszót könnyebb megszerezni, mint az otthoni gépen tárolt adatait szerezzük meg valakinek fizikai vagy szoftveres betörés segítségével. Továbbá a bizalmas adataink egy másik cég kezében vannak és nem egyértelmű, hogy mi történik az adatainkkal ha az a cég megszűnik.
+
+Ha sok webes alkalmazást használunk, akkor sok felhasználói fiókot kell létrehozni, a sok fiók nyilvántartása nehézkes lehet egy felhasználónak. Erre alternatíva, példáúl, a Facebook login vagy hasonló megoldás, de akkor az a baj, hogy mi lesz az adatainkkal, ha megszűnik a Facebook fiókunk. 
+
+Egyre kevésbé próbléma, de sokszor nem biztosított az állandó internetkapcsolat és ha nem elég a sávszélesség, akkor esetleg nagyon szenvedhet a használhatóság.
+
+
+
+\section{Kihívások}
+
 
 
 %----------------------------------------------------------------------------
-\section{Árvíztűrő tükörfúrógép}
+\section{Kollaboratív alkalmazások}
 %----------------------------------------------------------------------------
 Derp.
 
