--- a/LaTeX_diplomaterv/chapter2.tex
+++ b/LaTeX_diplomaterv/chapter2.tex
@@ -1,13 +1,27 @@
 %----------------------------------------------------------------------------
 \chapter{Hasonló eszközök vizsgálata}
 %----------------------------------------------------------------------------
-Derp derp, valami szöveg. Árvíztűrő tükörfúrógép.
+(10 oldal )Derp derp, valami szöveg. Árvíztűrő tükörfúrógép.
 
 
 %----------------------------------------------------------------------------
-\section{Árvíztűrő tükörfúrógép}
+\section{Lucidchart}
 %----------------------------------------------------------------------------
-Derp.
 
+\includegraphics[width=160mm,keepaspectratio]{figures/lucid.png}\\
+
+Lucidchart egy HTML5 és Javascript alapú diagramszerkesztő eszköz. \pdfcomment[icon=Note]{http://lifehacker.com/5112133/lucidchart-makes-stripped+down-flowcharts-for-free} 2008-ban lett béta verzióként elindítva.
+
+ 
+
+
+%----------------------------------------------------------------------------
+\section{Gliffy}
+%----------------------------------------------------------------------------
+
+Google Chrome plugin-ként offline üzemmódban is működik.
+
+
+\section{Összefoglalás}
 
 
