--- a/LaTeX_diplomaterv/chapter5.tex
+++ b/LaTeX_diplomaterv/chapter5.tex
@@ -1,6 +1,9 @@
 %----------------------------------------------------------------------------
 \chapter{Teljesítményelemzés és optimalizálás}
 %----------------------------------------------------------------------------
+
+(3-4 oldal)
+
 Derp derp, valami szöveg. Árvíztűrő tükörfúrógép.
 
 Selenium tesztek
@@ -10,6 +13,11 @@ Selenium tesztek
 \section{Kollaborációs teljesítményelemzés}
 %----------------------------------------------------------------------------
 Derp.
+
+
+++++++++++++++++++++++++
+random módon két ember crudol és le kell mérni , hogy mennyire valószínű, hogy elvésznek a bemenetei
+++++++++++++++++++++++++
 
 %----------------------------------------------------------------------------
 \section{Kliens oldali teljesítményelemzés}
