--- a/LaTeX_diplomaterv/diploma.tex
+++ b/LaTeX_diplomaterv/diploma.tex
@@ -22,7 +22,7 @@
 \usepackage[hang]{caption}
 \usepackage{hyperref}
 \usepackage{courier}
-
+\usepackage[author={Endre}]{pdfcomment}
 
 
 %--------------------------------------------------------------------------------------
