--- a/LaTeX_diplomaterv/mybib.bib
+++ b/LaTeX_diplomaterv/mybib.bib
@@ -14,6 +14,14 @@
   year=2013
 }
 
+
+@BOOK{nodebook,
+  author="Guillermo Rauch",
+  title="Smashing Node.JS",
+  publisher="Wiley",
+  year=2012
+}
+
 @misc{AngularDocConcepts,
   author= "angularjs.org",
   title = {AngularJS Conceptual Overview},
