--- a/LaTeX_diplomaterv/src/mongo.tex
+++ b/LaTeX_diplomaterv/src/mongo.tex
@@ -21,3 +21,4 @@ Fontos megjegyezni, hogy a RDBMS rendszerekkel szemben a MongoDB nem tud ACID tr
 A CAP\footnote{(C)onsistency - Konzisztencia, (A)vailability - Elérhetőség, (P)artition tolerance - Partícionálás tolerancia} tétel kijelenti, hogy egy elosztott rendszer nem tudja egyszerre teljesíteni a ...
 585
 
+A 32 bites rendszereken a mongoDB szerver csak 2GB tárral gazdálkodhat, ugyanakkor a 64 bites esetben csak a hardver mérete korlátozza.
