--- a/LaTeX_diplomaterv/chapter4.tex
+++ b/LaTeX_diplomaterv/chapter4.tex
@@ -1,8 +1,134 @@
 %----------------------------------------------------------------------------
 \chapter{Az elvégzett munka}
 %----------------------------------------------------------------------------
-Derp derp, valami szöveg\cite{Wettl04}. 
 
+(40 oldal)
+
+%----------------------------------------------------------------------------
+\section{Rendszerterv}
+%----------------------------------------------------------------------------
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=100mm,keepaspectratio]{figures/Rendszerterv.png}\\
+\end{figure}
+
+\subsection{Kollaboráció}
+
+Mivel kollaboratív alkalmazásról van szó elsőbbségi szempont az ellentmondó, nagyjából egyidejű változtatások konfliktusait feloldani. Felmerült ötletként a Google Docs-ban alkalmazott Operational Transformation megoldás amiben folyó szöveg egyidejű módosítása van megoldva ``előbb-útóbbi'' konzisztencia elérésével. Az Operational Transformation algoritmust nehéz implementálni CITATIONNEEDED, viszont vannak nyílt forráskódú megoldások rá\footnote{http://www.sharejs.com}. Nem ezen a vonalon indultam el, mert nehézkesnek gondoltam annak a rétegnek a fejlesztését ami a DOM-ban levő gráfot szöveggé- és vissza transzformálja akkor is , ha meg van oldva a különböző kliensek által látott szövegreprezentáció kollaboratív változtatása. 
+
+Erre az alternatíva ami végül kiválasztásra került egy meglehetősen pehelysúlyú megoldás: a gráf módosítását jól meghatározott eseményekként defineálom és ezek az események a többi felhasználóhoz Websockets broadcast üzeneteken keresztül jutnának el. Egy példa esemény egy entitás módosítása: az A kliens böngészőjében elhúzunk egy dobozt, a kliensoldali kód a szervernek egy kérésben szól a módosításról, a szerver perzisztálja az adatot és Websockets broadcast üzeneten keresztül értesíti a többi résztvevőt. Ilyenkor az esemény üzenet az új értékét is tartalmazza az entitásnak ami módosult. 
+
+Ebben a megoldásban igazából semmi konfliktus feloldás nincsen és a továbbiakban be fogom mutatni, hogy ez nem is feltétlenül szükséges. Először is nézzük meg, hogy milyen jellegű konfliktusokról lehet szó; a közösen manipulált elemeket lehet egyidejűleg létrehozni, törölni és módosítani, feltételezve két szereplőt a következő esetek relevánsak:
+
+\begin{enumerate}
+\item { törlés - törlés} Ha majdnem egyszerre ketten törlik ugyanazt az entitást, akkor csak kezelni kell kliens és szerver oldalon, hogy a később érkező törlés művelet már fölösleges. 
+\item { módosítás - módosítás} Itt két eset lehetséges:
+\begin{enumerate}
+\item Különböző attribútumok változnak. Ekkor, ha csak a változásokat küldjük el , akkor ????összefésülhetők az attribútumok, ha nem , akkor igazából a következő esetről beszélünk,
+\item Ugyanazok az attribútumok változnak. Ekkor sajnos arról beszélünk, hogy egyidejűleg az első felhasználó jobbra 
+húzta , a másik felhasználó balra húzta az objektumot és a később történt esemény fog végül érvényesülni. 
+
+Az első kérdés ami felmerül itt az, hogy ez egyáltalán próbléma? Próbléma, mert a mozgatás elvesztése apró művelet könnyen megismételhető, de ha egy hosszú szöveg beírásáról van szó egy attribútum mezőbe, akkor nem kívánatos elveszíteni azt. Egyszerű modellek szerkesztésénél mint egy állapot diagram nem tipikus a hosszú szövegek beírása. 
+
+Jó esetben körülbelül 100 ms alatt mindenkihez eljutnak az események, ez azt jelentené, hogy nem lehet annyira gyakori ez a próbléma, hogy egy verziókezelő rendszerhez hasonló megoldással lassítsuk a felhasználók munkafolyamatát.
+
+\pdfcomment[icon=Note]{insert: Zárolás?}
+
+Egy egyszerű felhasználói élmény javítás egy jelzés lesz, ami úgy néz ki, hogy minden felhasználó látja, hogy ki éppen milyen objektumot jelölt ki színekkel jelölve. Ha valaki más ki szeretné törölni az objektumot aminek az életrajzát éppen írjuk, akkor a rendszer legalább szól, hogy azt valaki kijelölte. Ez a megoldás egyik fő előnye, hogy nem bonyolítja egyáltalán a munkafolyamatot példáúl a zároláshoz képest.
+\pdfcomment[icon=Note]{insert: Ezt meg is kéne csinalni? }
+
+\end{enumerate}
+\item { módosítás - törlés } Ez a szituáció ugyanaz mint az előző. A fent említett megjelölés egy megoldás, de egy visszavonás művelet megnövekedett komplexitás árán megoldaná teljesen a próblémát.
+\end{enumerate}
+
+\pdfcomment[icon=Note]{insert: A többi miért irreleváns?}
+
+Ha a két művelet két különböző csúcsot érint, akkor nincs próbléma, mert triviálisan mindkét művelet érvényesül, ha a egy csúcsot és egy hozzá tartozó élet érint, akkor sincs gond, mert a csúcs törlése maga után vonja az él törlését is. 
+
+Az 5FEJEZET-ben teljesítményelemzés keretein belül további indoklást részletezek. 
+
+Az előnye a megoldásnak az egyszerűség és a remélhetőleg jobb felhasználói élmény ami abból eredhet, hogy visszaigazolás nélkül módosul a felhasználó felületén a diagram a saját beavatkozása után. Egy olyan alkalmazásnál ami egy nem-kollaboratív offline alkalmazással versenyzik létfontosságú a kis reakcióidő a felületen. Az egyszerűség maga után vonja a könnyebb karbantarthatóságot és kisebb hibalehetőséget.   
+
+
+Egy hátránya az, hogy az események száma nő a komplexitás növekedésével. 
+
+
+
+\subsubsection{Eltérések detektálása}
+
+Egy funkció ami jelzi, hogy két felhasználó eltérő diagramot lát holott ugyanazt kellene, hogy lássák -- nevezzük eltérés detektálásnak -- két szempontból is hasznos lesz: egyrészt a teljesítményelemzés során fel lehet használni arra, hogy a kollaborációs megoldás hatékonyságát vizsgáljam különböző paraméterek mellett , másrészt felhasználói élmény szempontjából szükséges, hiszen, ha eltérést vesz észre az algoritmus, akkor a diagram újratöltésével orvosolható a próbléma. 
+A kérdés az, hogy mi az amit összehasonlítunk ilyenkor? A teljesítményt és a sávszélességet szem előtt tartva egy egyszerű megoldás egy hash értéket számolni a diagramból majd ezt összevetni a többi kliens által kiszámolt értékkel.
+
+Ux
+
+Szerver is részt vesz?
+
+Teljesítmény
+
+Nyugtázás?
+
+Másik kérdés, hogy, hogyan oldható meg az, hogy ugyanabban az időben normális körülmények között előfordulhat, hogy 
+
+
+
+%----------------------------------------------------------------------------
+\section{Adatbázis}
+%----------------------------------------------------------------------------
+
+A kliens oldalról nézve egy felhasználói diagram fő elemei az entitások és a köztük lévő kapcsolatok (vagy csúcsok és élek a gráfban). 
+
+
+\begin{lstlisting}
+{
+    "_id" : ObjectId("52486e8e9b7f14a725000001"),
+    "position" : {
+        "top" : 312.9618225097656,
+        "left" : 607.920166015625
+    },
+    "title" : "Alszik",
+    "document" : "5242aa48ddda9b0000000001"
+}
+\end{lstlisting}
+
+Az entities kollekcióban tárolva vannak a diagram entitásai. Lehetne egy kollekcióban tárolni mindent ami egy diagramhoz tartozik, de azért van szükség külön kollekcióban tárolni az entitásokat, mert az egyedi azonosítójukra szükség van a kliens oldalon is. ERROLBOVEBBENAKLIENSOLDALIALKALMAZASBAN
+A position attribútum konkrétan a kliensoldali CSS pozícionálásra van használva, a document attribútum egy idegen kulcs lenne, ha relációs adatbázisról beszélnénk, de valóban annak a dokumentumnak az azonosítóját tárolja aminek része.
+
+\begin{lstlisting}
+{
+    "_id": "524b08b1b7f4db8e68000001",
+    "connections": [
+    {
+        "from": "524b08b4b7f4db8e68000002",
+        "to": "524b08bdb7f4db8e68000003",
+        "label": "valami"
+    },
+    ...],
+    "entities": [],
+},
+\end{lstlisting}
+
+
+%----------------------------------------------------------------------------
+\section{A szerver oldali alkalmazás}
+%----------------------------------------------------------------------------
+
+
+%----------------------------------------------------------------------------
+\subsection{Kétirányú kommunikáció}
+%----------------------------------------------------------------------------
+
+Ha azt nézzük, hogy egyidejűleg x darab diagramot szerkeszt diagramonként y darab különböző felhasználó, akkor felmerül az a próbléma, hogy hogyan követjük nyomon, hogy milyen eseményeket milyen socket-ekre kell továbbítani, más szóval hogyan történjen a broadcast. Szerencsére a Socket.IO könyvtár ezt megoldja úgynevezett szoba funkcionalitással, egy szobához hozzáadott socketek tudnak broadcast üzenetet küldeni a többi szobabeli socketnek, ráadásul a socketek eltávolítása is átlátszóan történik és nem kell memóriakezelési próblémákkal küzdeni.Így a socket kezelő szerver oldali logika meglehetősen vékony lesz, de ez is a célja a Socket.IO könyvtárnak. 
+
+Mivel minden szerkesztendő diagramhoz tartozik egy szoba, kézenfekvő a diagram azonosítóját beállítani a szoba neveként. A modularitást szem előtt tartva, a socket kezeléssel kapcsolatos funkcionalitást egy SocketAdapter nevű objektumba csomagoltam. A SocketAdapter példány példányosítja a Socket.IO szervert és gondoskodik az új kapcsolatok beállításáról, rajta keresztül lehet hívni Socket.IO függvényeket.
+
+Egy új socket-re eseménykezelőket hoz létre a SocketAdapter és a legfontosabb talán a \lstinline{room:change} esemény, ami egy diagram megnyitásakor, vagy másik diagram-ra való áttéréskor hívódik meg a kliens által. Ekkor a régi szobából átkerül az új szobába a socket. 
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=15cm,keepaspectratio]{figures/collaboration-seq.png}
+\caption{Entitás módosítás feldolgozása}
+\label{fig:angularhtml}
+\end{figure}
 
 
 %----------------------------------------------------------------------------
@@ -11,9 +137,36 @@ Derp derp, valami szöveg\cite{Wettl04}.
 Derp.
 
 
+%----------------------------------------------------------------------------
+\subsection{Szolgáltatások}
+%----------------------------------------------------------------------------
+
+
+\begin{lstlisting}
+  app.factory('DocumentService', ['$resource', function($resource){
+  return $resource('/api/docs/:id', {id:'@_id'}, 
+    { update: {method:'PUT' } , 
+      query: {method:'GET', isArray: true}});
+    }]);
+\end{lstlisting}
+
 
 %----------------------------------------------------------------------------
-\section{A szerver oldali alkalmazás}
+\subsection{Unit teszt esetek}
+%----------------------------------------------------------------------------
+
+
+%----------------------------------------------------------------------------
+\section{A Websockets protokoll vizsgálata}
+%----------------------------------------------------------------------------
+
+A Wireshark csomagvizsgáló eszközzel megvizsgáltam jobban a websockets kommunikációt.  
+
+
+
+
+%----------------------------------------------------------------------------
+\section{Promises és a ``callback hell''}
 %----------------------------------------------------------------------------
 Derp.
 
@@ -21,5 +174,8 @@ Derp.
 %----------------------------------------------------------------------------
 \section{Szimuláció}
 %----------------------------------------------------------------------------
-Derp.
+A szimuláció célja automatizálni a felhasználói bemenetet egy teljesítmény méréshez. A megoldásnak tartalmaznia kell alapszintű felhasználói bemenet szimulálását: egérkattintás, szövegbeírás, várakozás és mivel egy grafikus modellt akarunk szerkeszteni a ``drag and drop'' funkcióra is szükség van. 
 
+A böngészőautomatizálás Selenium Webdriver segítségével történt, ez az eszköz lehetővé teszi, hogy különböző nyelveken megírt (Python, Java, PHP stb. ) teszt esetekben a Webdriver API-val kommunikálva böngésző példányokat lehet irányítani. 
+Seleniumhoz tartozik egy grafikus fejlesztőkörnyezet is ami Selenium IDE néven Firefox böngészőkiegészítésként fut, vele rögzíteni lehet felhasználói bemenetet és egér eseményeket, majd egy ilyen felvételt újralejátszani, módosítani. Ez előnyös teszterek számára akik repetitív munkát végeznek és nem tudnak programozni, de fejlesztők számára is jó, mert ezekből a felvételeket Python, Ruby stb teszteseteket lehet exportálni. 
+Azon kívül, hogy automatizált tesztelésre a szkriptek alkalmasabbak, a Selenium IDE sajnos nem tud egérmozgatást rögzíteni, így nem hasznos a feladat szempontjából. A Selenium API javascript implementációját példáúl a selenium-webdriver csomag valósítja meg, viszont hamarosan kiderült, hogy ez a csomag nem támogatja ``drag and drop'' funcktiót, emiatt a Python implementációt választottam. 
