--- a/LaTeX_diplomaterv/jslistings.tex
+++ b/LaTeX_diplomaterv/jslistings.tex
@@ -20,9 +20,9 @@
    basicstyle=\footnotesize\ttfamily\bfseries,
    showstringspaces=false,
    showspaces=false,
-   numbers=left,
-   numberstyle=\footnotesize,
-   numbersep=9pt,
+   %numbers=left,
+   %numberstyle=\footnotesize,
+   %numbersep=9pt,
    tabsize=2,
    breaklines=true,
    showtabs=false,
