--- a/LaTeX_diplomaterv/chapter2.tex
+++ b/LaTeX_diplomaterv/chapter2.tex
@@ -19,6 +19,9 @@ Lucidchart egy HTML5 és Javascript alapú diagramszerkesztő eszköz. \pdfcomme
 \section{Gliffy}
 %----------------------------------------------------------------------------
 
+\includegraphics[width=160mm,keepaspectratio]{figures/gliffy.png}\\
+
+
 Google Chrome plugin-ként offline üzemmódban is működik.
 
 
