--- a/LaTeX_diplomaterv/chapter3.tex
+++ b/LaTeX_diplomaterv/chapter3.tex
@@ -72,6 +72,7 @@ Miért nem használtam ?
 Derp.
 
 
+
 \input{socketio}
 
 \input{src/angular}
@@ -84,4 +85,8 @@ Derp.
 \input{src/nodejs}
 
 
+
+%----------------------------------------------------------------------------
+\section{MEAN stack}
+%----------------------------------------------------------------------------
 
