--- a/LaTeX_diplomaterv/chapter4.tex
+++ b/LaTeX_diplomaterv/chapter4.tex
@@ -113,6 +113,10 @@ A position attribútum konkrétan a kliensoldali CSS pozícionálásra van haszn
 %----------------------------------------------------------------------------
 
 
+
+
+
+
 %----------------------------------------------------------------------------
 \subsection{Kétirányú kommunikáció}
 %----------------------------------------------------------------------------
@@ -129,6 +133,8 @@ Egy új socket-re eseménykezelőket hoz létre a SocketAdapter és a legfontosa
 \caption{Entitás módosítás feldolgozása}
 \label{fig:angularhtml}
 \end{figure}
+
+
 
 
 %----------------------------------------------------------------------------
@@ -154,6 +160,11 @@ Derp.
 %----------------------------------------------------------------------------
 \subsection{Unit teszt esetek}
 %----------------------------------------------------------------------------
+
+
+\input{src/compile}
+
+
 
 
 %----------------------------------------------------------------------------
