--- a/LaTeX_diplomaterv/chapter6.tex
+++ b/LaTeX_diplomaterv/chapter6.tex
@@ -3,6 +3,11 @@
 %----------------------------------------------------------------------------
  Árvíztűrő tükörfúrógép.
 
+További felhasználási lehetőségek.
+
+Workflow editor
+
+Interaktiv video linking felulet 
 
 %----------------------------------------------------------------------------
 \section{Árvíztűrő tükörfúrógép}
