--- a/LaTeX_diplomaterv/diploma.tex
+++ b/LaTeX_diplomaterv/diploma.tex
@@ -90,6 +90,8 @@
 	belowskip=3pt,
 	columns=fixed,
 	backgroundcolor=\color{lightgray},
+    literate={á}{{\'a}}1
+            {é}{{\'e}}1        
 } 		
 \def\lstlistingname{lista}	
 
