latex, fork start

--- a/LaTeX_diplomaterv/chapter2.tex
+++ b/LaTeX_diplomaterv/chapter2.tex
@@ -25,6 +25,9 @@ Lucidchart egy HTML5 és Javascript alapú diagramszerkesztő eszköz. \pdfcomme
 Google Chrome plugin-ként offline üzemmódban is működik.
 
 
+\section{JSFiddle}
+\section{CodeWars}
+
 \section{Összefoglalás}
 
 
