--- a/LaTeX_diplomaterv/src/mark.tex
+++ b/LaTeX_diplomaterv/src/mark.tex
@@ -16,9 +16,7 @@ Szerencsére szerveroldalon a Socket.IO könnyen elérhetővé teszi ezt az info
 
 Az ábrán látszik, hogy szoba váltáskor a szerveroldal minden résztvevőjét a szobának (az új résztvevőt beleértve) értesít arról, hogy belépett, és az új résztvevőnek a létező socketek listáját is elküldi. Kilépéskor vagy diagram váltáskor is értesíti a klienseket. Így a kliensek nyilvántartást tudnak tartani a kapcsolódott többi kliensről. A \lstinline{client joined} és a \lstinline{client left} üzenetek esetében -- mivel az alkalmazás nem használ felhasználói fiókokat -- egy socket példány azonosítót is küld a kliensnek.
 
-szinek mint userek
-kep a jelolesrol  
 
-162
-
-Színek hogyan?
+\pdfcomment[icon=Note]{insert: szinek mint userek}
+\pdfcomment[icon=Note]{insert: kep a jelolesrol }
+\pdfcomment[icon=Note]{insert:Színek hogyan?}
